@@ -48,6 +48,7 @@ void find_W_bavafa2008 ( np_t np, gl_t *gl, spec_t rhok, double T, double Te, do
   double R;
   double theta;
 
+//  Estar=3.6e-21;
   theta = log(Estar);
 
   for ( k = 0; k < ns; k++ ) {
@@ -68,11 +69,11 @@ void find_W_bavafa2008 ( np_t np, gl_t *gl, spec_t rhok, double T, double Te, do
   }
 
   if (REACTION[3]){
-    add_to_W_2r3p ( specNH3, speceminus, specNH2, specH, speceminus, min( exp ( 2.0636e-07 * pow( theta, 5.0 ) - 4.3548e-11 * pow( theta, 7.0 ) ), 1.0400e-08 * exp( -1.1290e+19 * Estar ) + 2.0460e-09 * exp( -3.6270e05 * Estar ) ), N, W );
+    add_to_W_2r3p ( specNH3, speceminus, specNH2, specH, speceminus, _averaged_rate(np,gl,3,min( exp ( 2.0636e-07 * pow( theta, 5.0 ) - 4.3548e-11 * pow( theta, 7.0 ) ), 1.0400e-08 * exp( -1.1290e+19 * Estar ) + 2.0460e-09 * exp( -3.6270e05 * Estar ) )), N, W );
   }
 
   if (REACTION[4]){
-    add_to_W_2r4p ( specNH3, speceminus, specNH, specH, specH, speceminus, min( exp ( 1.4602e-07 * pow ( theta, 5.0 ) - 1.3747e-21 * pow( theta, 13.0 ) ), 1.200e-08 ), N, W );
+    add_to_W_2r4p ( specNH3, speceminus, specNH, specH, specH, speceminus, _averaged_rate(np,gl,4,min( exp ( 1.4602e-07 * pow ( theta, 5.0 ) - 1.3747e-21 * pow( theta, 13.0 ) ), 1.200e-08 )), N, W );
   }
 
   if (REACTION[5]){
@@ -130,7 +131,7 @@ void find_dW_dx_bavafa2008 ( np_t np, gl_t *gl, spec_t rhok, double T, double Te
   }
 
 
-  if (REACTION[1]){
+  if (REACTION[1] && FALSE){
     kf = min( exp ( 1.2346e-14 * pow ( theta, 9.0 ) + 0.3115 * theta ), 1.5640e-07 );
     dkfdTe = 0.0;
     dkfdT = 0.0;
@@ -138,7 +139,7 @@ void find_dW_dx_bavafa2008 ( np_t np, gl_t *gl, spec_t rhok, double T, double Te
     add_to_dW_2r3p ( specNH3, speceminus, specNH3plus, speceminus, speceminus, kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe );
   }
 
-  if (REACTION[2]){
+  if (REACTION[2] && FALSE){
     kf = min( exp ( 0.4853 * theta + 5.5515e-131 * pow( theta, 79.0 ) ), 2.4490e-10 );
     dkfdTe = 0.0;
     dkfdT = 0.0;
@@ -146,7 +147,7 @@ void find_dW_dx_bavafa2008 ( np_t np, gl_t *gl, spec_t rhok, double T, double Te
     add_to_dW_2r4p ( specNH3, speceminus, specNH2plus, specH, speceminus, speceminus, kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe );
   }
 
-  if (REACTION[3]){
+  if (REACTION[3] && FALSE){
     kf = min( exp ( 2.0636e-07 * pow( theta, 5.0 ) - 4.3548e-11 * pow( theta, 7.0 ) ), 1.0400e-08 * exp( -1.1290e+19 * Estar ) + 2.0460e-09 * exp( -3.6270e05 * Estar ) );
     dkfdTe = 0.0;
     dkfdT = 0.0;
@@ -154,7 +155,7 @@ void find_dW_dx_bavafa2008 ( np_t np, gl_t *gl, spec_t rhok, double T, double Te
     add_to_dW_2r3p ( specNH3, speceminus, specNH2, specH, speceminus, kf, N, dkfdT, dkfdTv, dkfdTe, dWdrhok, dWdT, dWdTv, dWdTe );
   }
 
-  if (REACTION[4]){
+  if (REACTION[4] && FALSE){
     kf = min( exp ( 1.4602e-07 * pow ( theta, 5.0 ) - 1.3747e-21 * pow( theta, 13.0 ) ), 1.200e-08 );
     dkfdTe = 0.0;
     dkfdT = 0.0;
