@@ -7,6 +7,12 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2023 OCT 05b
+  * in model/chem/_NH3_Plasma_10s/bavafa2008.c
+    - added _average_rates() calls to reactions 3 and 4
+    - removed the implicit treatment of reactions 1-4
+    
+
 2023 OCT 05a
   * in cycle/share/cycle_share.c
     - in setup_multizone(), set ks and ke to 0 when in 2D mode (to avoid a valgrind complaint)
